@@ -471,6 +471,28 @@ extern int sacctmgr_list_event(int argc, char *argv[])
 	List format_list = list_create(slurm_destroy_char);
 	List print_fields_list; /* types are of print_field_t */
 
+	/* If we don't have any arguments make sure we set up the
+	   time correctly for just the past day.
+	*/
+	if (argc == 0) {
+                struct tm start_tm;
+		event_cond->period_start = time(NULL);
+
+                if(!localtime_r(&event_cond->period_start, &start_tm)) {
+                        fprintf(stderr,
+                                " Couldn't get localtime from %ld",
+                                event_cond->period_start);
+                        exit_code=1;
+                        return 0;
+                }
+                start_tm.tm_sec = 0;
+                start_tm.tm_min = 0;
+                start_tm.tm_hour = 0;
+                start_tm.tm_mday--;
+                start_tm.tm_isdst = -1;
+                event_cond->period_start = mktime(&start_tm);
+        }
+
 	for (i=0; i<argc; i++) {
 		int command_len = strlen(argv[i]);
 		if (!strncasecmp (argv[i], "Where", MAX(command_len, 5))
